rabbit/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
    - name: http  # Connection to Management GUI
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: amqp  # Advanced Message Queuing Protocol
      protocol: TCP
      port: 5672
      targetPort: 5672
